# xterm-app

./: README.md
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fonts.rs  lib.rs  pty.rs  serial.rs  session.rs  ssh.rs
src/components/: SettingsDialog.tsx  Terminal.tsx
src/lib/: terminal-settings.ts
